<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_9"
    tools:context=".ShopDetail">

    <ImageButton
        android:id="@+id/image_btn_arrow_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"/>

    <ImageButton
        android:id="@+id/image_shopping_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"/>
    <ScrollView
        android:id="@+id/scroll_view_shop_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_btn_arrow_shop_detail">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_shop_detail"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/antibiotic"
                android:layout_gravity="center"
                android:layout_margin="16dp"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_shop_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_name_product_shop_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multi_vitamins"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"/>
                    <TextView
                        android:id="@+id/tv_pills_product_shop_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pils_90"
                        android:textColor="@color/black"
                        android:layout_marginStart="16dp"
                        android:layout_below="@+id/tv_name_product_shop_detail"/>
                    <RatingBar
                        android:id="@+id/rat_shop_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:rating="4"

                        android:isIndicator="false"
                        android:layout_below="@+id/tv_pills_product_shop_detail"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"/>
                    <com.shawnlin.numberpicker.NumberPicker
                        android:id="@+id/weight_picker"
                        android:layout_width="90dp"
                        android:layout_height="80dp"
                        app:np_textColor="#A1A1A1"
                        app:np_selectedTextColor="@color/black"
                        app:np_width="50dp"
                        app:np_height="130dp"
                        app:np_max="10"
                        app:np_min="1"
                        app:np_value="1"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        />

                    <TextView
                        android:id="@+id/tv_product_detail"
                        android:layout_margin="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_detail"
                        android:textColor="@color/black"
                        android:layout_below="@+id/rat_shop_detail"/>
                    <TextView
                        android:id="@+id/tv_info_shop_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_detail"
                        android:textColor="@color/black"
                        android:layout_margin="16dp"
                        android:layout_below="@+id/tv_product_detail"/>
                    <TextView
                        android:id="@+id/tv_final_price_product_shop_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/final_price_217"
                        android:textColor="@color/black"
                        android:layout_margin="16dp"
                        android:layout_below="@+id/tv_info_shop_detail"/>

                    <Button
                        android:id="@+id/btn_add_to_basket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/add_to_basket"
                        android:backgroundTint="@color/colorPrimary"
                        android:layout_below="@+id/tv_final_price_product_shop_detail"
                        app:icon="@drawable/ic_baseline_shopping_cart_24_white"/>
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>