<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Shop">
    
    <ImageButton
        android:id="@+id/image_btn_arrow_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/tv_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:layout_margin="6dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:id="@+id/image_shopping_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"/>
    
    <ScrollView
        android:id="@+id/scroll_view_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_btn_arrow_shop">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_search_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_search"
                android:layout_margin="16dp"
                app:hintTextColor="@color/color_1"
                app:startIconDrawable="@drawable/ic_baseline_search_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_search_shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/color_1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/color_9">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/image_product_shop"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_margin="6dp"
                        android:src="@drawable/antibiotic"/>
                    <TextView
                        android:id="@+id/tv_name_product_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multi_vitamins"
                        android:textColor="@color/black"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@id/image_product_shop"/>
                    <TextView
                        android:id="@+id/tv_pills_product_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pils_90"
                        android:textColor="@color/black"
                        android:layout_toEndOf="@id/image_product_shop"
                        android:layout_below="@id/tv_name_product_shop"/>
                    <ImageButton
                        android:id="@+id/image_fav_product_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:src="@drawable/ic_baseline_favorite_border_24"
                        android:background="@null"
                        android:foreground="?attr/selectableItemBackground"
                        android:layout_alignParentEnd="true"/>
                    <TextView
                        android:id="@+id/tv_final_price_product_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/final_price_217"
                        android:textColor="@color/black"
                        android:layout_toEndOf="@id/image_product_shop"
                        android:layout_below="@id/tv_pills_product_shop"/>
                    <TextView
                        android:id="@+id/tv_price_product_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_287"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/tv_final_price_product_shop"
                        android:layout_below="@+id/tv_pills_product_shop"/>
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_add_24_white"
                        android:layout_below="@+id/image_fav_product_shop"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="16dp"
                        app:tint="@color/white"
                        app:backgroundTint="@color/color_8"/>
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>